[package]
name = "mail-check"
version = "1.2.0"
edition = "2024"

[dependencies]
imap = { git = "https://github.com/jonhoo/rust-imap", default-features = false, features = ["native-tls"] }
notify-rust = { version = "4.11", default-features = false, features = ["dbus"] }
keyring = { version = "3", default-features = false, features = ["linux-native-sync-persistent"] }
toml = { version = "0.8" }
serde = { version = "1", default-features = false, features = ["serde_derive"] }
rpassword = { version = "7" }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"

[profile.release]
debug = false
opt-level = 3
rpath = false
lto = true
debug-assertions = false
overflow-checks = false
strip = "debuginfo"

[profile.minimal]
inherits = "release"
opt-level = "z"
strip = true
panic = "abort"
codegen-units = 1
